Add Constant Variable for Repeat String